# piesni-z-akordami

./: .gitignore  Makefile  README.md  pyproject.toml
app/: __init__.py  __main__.py  auth.py  db.py  models.py  views.py
app/templates/: base.html  edit.html  help.html  index.html
lyrics_chordifier/: __init__.py  api.py  db.py  models.py  repository.py  s3.py  service.py  views.py
lyrics_chordifier/templates/: base.html  edit.html  index.html
